src/components/FilmCard.module.scss
.filmCard {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  background-color: #eee;
  height: 250px;
  width: 450px;
  border-radius: 20px;
  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
  margin: 10px;
  position: relative;
  border: 1px solid #333;
  transition: all 300ms ease;

  &:hover {
    transform: translateY(-5px);
    transition: all 300ms ease;
  }

  &::before {
    content: '';
    display: block;
    width: 100%;
    height: 100%;
    border-radius: 22px;
    position: absolute;
    border: 3px solid rgba(255, 255, 255, .75);
    pointer-events: none;
  }

  &::after {
    content: '';
    display: block;
    width: 100%;
    height: 5%;
    position: absolute;
    background-color: white;
    filter: blur(5px);
    top: 15px;
    opacity: .5;
    pointer-events: none;
  }

  .imageFiller {
    margin: 10px;
    flex: 2;
    width: 100%;
    height: 90%;
    border-radius: 10px;
    background-color: #ddd;
    background-size: cover;
    background-position: top center;
    background-repeat: no-repeat;
    transition: all 300ms ease;
    &.tabClicked {
      flex: 0;
      transition: all 300ms ease;
      margin: 0;
    }

  }

  .text {
    flex: 3;
    margin-left: .5rem;
    max-height: 90%;
    overflow-y: auto;
    transition: all 300ms ease;
    &.tabClicked {
      animation: fadeIn;
      animation-direction: reverse;
      animation-duration: 100ms;
      animation-fill-mode: forwards;
      flex: 0;
      transition: all 300ms ease;
      margin-left: 0;
    }

    h3 {
      font-weight: 400;
      text-transform: uppercase;
      letter-spacing: .05rem;
    }
    p {
      font-size: 0.8rem;
      margin-block-start: 0;
      margin-block-end: 0;
      padding: .25rem 0;
    }
  }

  .tab {
    flex: 1;
    background-color: #8EC5FC;
    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
    height: 100%;
    width: 100%;
    border-radius: 0 20px 20px 0;
    cursor: pointer;
    transition: all 300ms ease;
    p {
      opacity: 0;
    }
    &.tabClicked {
      display: flex;
      align-items: center;
      justify-content: center;
      transition: all 300ms ease;
      flex: 1;
      border-radius: 20px;
      overflow-y: auto;
      p {
        padding: 1.5rem;
        color: white;
        text-shadow: 0 0 10px rgba(0, 0, 0, .75);
        animation: fadeIn 400ms;
        animation-fill-mode: forwards;
        animation-delay: 250ms;
      }
    }
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  50% {
    opacity: .5;
  }
  100% {
    opacity: 1;
  }
}

